--- a/formlar/projeEkran1.ui
+++ b/formlar/projeEkran1.ui
@@ -39,7 +39,7 @@
    <string>TÜBİTAK 4006 ŞAL</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="TUBITAK4006SAL.qrc">
+   <iconset resource="../resources/TUBITAK4006SAL.qrc">
     <normaloff>:/ICONS/resimler/sal-logo.png</normaloff>:/ICONS/resimler/sal-logo.png</iconset>
   </property>
   <property name="styleSheet">
@@ -139,7 +139,11 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:8pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;Sağ üst köşeden proje seçin. &lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:12pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;Çıkan metni kaydırmak için 2 parmağınızı kullanın.&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:12pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;Sağ üst köşeden araçlara tıklayarak resmi büyütebilirsiniz.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
          </widget>
         </item>
@@ -182,7 +186,7 @@ p, li { white-space: pre-wrap; }
            </sizepolicy>
           </property>
           <property name="styleSheet">
-           <string notr="true">background-color: qlineargradient(spread:pad, x1:0.607955, y1:0.29, x2:0.466, y2:0.0745909, stop:0.5625 rgba(48, 192, 125, 255), stop:1 rgba(255, 255, 255, 255));
+           <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(27, 0, 174, 255), stop:1 rgba(255, 255, 255, 255));
 font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
@@ -334,7 +338,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </widget>
   <action name="bar_proje1">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -343,7 +347,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje8">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -352,7 +356,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje2">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -361,7 +365,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje3">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -370,7 +374,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje4">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -379,7 +383,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje9">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -388,7 +392,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje5">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -397,7 +401,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje7">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -406,7 +410,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje10">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -415,7 +419,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje13">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -424,7 +428,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje6">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -433,7 +437,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje11">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -442,7 +446,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje12">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -451,7 +455,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje15">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -460,7 +464,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje14">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -469,7 +473,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje16">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -478,7 +482,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje17">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -487,7 +491,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje18">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -496,7 +500,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje19">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -505,7 +509,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje22">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -514,7 +518,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje20">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -523,7 +527,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje21">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -532,7 +536,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje23">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -541,7 +545,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="bar_proje24">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
@@ -553,7 +557,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
     <bool>false</bool>
    </property>
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/magnifying-glass.png</normaloff>:/ICONS/resimler/magnifying-glass.png</iconset>
    </property>
    <property name="text">
@@ -562,7 +566,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
   <action name="cikis">
    <property name="icon">
-    <iconset resource="TUBITAK4006SAL.qrc">
+    <iconset resource="../resources/TUBITAK4006SAL.qrc">
      <normaloff>:/ICONS/resimler/power.png</normaloff>:/ICONS/resimler/power.png</iconset>
    </property>
    <property name="text">
@@ -571,7 +575,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </action>
  </widget>
  <resources>
-  <include location="TUBITAK4006SAL.qrc"/>
+  <include location="../resources/TUBITAK4006SAL.qrc"/>
  </resources>
  <connections/>
 </ui>
