--- a/Kaynak_Dosyalar/qml.qrc
+++ b/Kaynak_Dosyalar/qml.qrc
@@ -8,5 +8,6 @@
         <file>Qml/main.qml</file>
         <file>Qml/ProjeEkrani.qml</file>
         <file>Qml/ActionBar.qml</file>
+        <file>Qml/ResimEkrani.qml</file>
     </qresource>
 </RCC>
