--- a/resources/resimler.qrc
+++ b/resources/resimler.qrc
@@ -2,6 +2,8 @@
     <qresource prefix="/resimler">
         <file>resimler/arkaplan.jpg</file>
         <file>resimler/back.png</file>
-        <file>resimler/sal-logo.jpg</file>
+        <file>resimler/info.png</file>
+        <file>resimler/actionButton.png</file>
+        <file>resimler/sal-logo.png</file>
     </qresource>
 </RCC>
